modificando about.html y styles.css

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="container-nav">
+    <header class="container-nav">
         <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi Página Web</a>
             <ul class="nav-links">
@@ -18,16 +18,17 @@
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-    </div>
-    <div class="container">
+    </header>
+    <main class="container">
         <h1>Acerca de</h1>
         <p>¡Bienvenido a nuestra página "Acerca de"! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
         <div class="imagenes">
             <img src="crochet.jpg" alt="ovillo de algodón">
             <img src="snowball.jpg" alt="copo de nieve">
             <img src="flowers.jpg" alt="rama con flores rosadas">
-        </div>   
-    </div>
+        </div>  
+        <div class="greeting">¡Hola! 😉</div> 
+    </main>
     <footer>
         <div class="container alert-button">
             <button onclick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
